new endpoint attendance
